--- a/references.html
+++ b/references.html
@@ -52,7 +52,7 @@
 <body id="page-top" style="background-color: white">
 
  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container" style="padding: 0px; margin: 0px; max-width: 100%">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"--> 
         <img src="logo.png" class="navbar-brand mr-auto" style="height: 100%; width: 112px; position: relative; padding-left: 0px;">
@@ -66,8 +66,8 @@
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="index.html">Home</a>
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" type="button" onclick="myFunction()">Book Now</a> 
-<script>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="book.html">Book Now</a> 
+<!--<script>
 function myFunction() {
   if (confirm("                    BLURRY MANE BARBERSHOP COVID-19 NOTICE \n\nClients will NOT be serviced if they fail to comply with the Toronto Public Health Standards: \n    Being in close contact with someone who is sick or has been\n    confirmed with Covid-19 in the past 14 days. \n    Returned from travel outside Canada in the past 14 days. \n    Experiencing the following symptoms: Fever, Cough, Shortness \n    of breath, Headache, Sore Throat, Loss of Taste or Smell. \n \nAlso, Clients MUST wear a mask and hand sanitizer must be applied upon arrival. Arriving with additional guests will NOT be allowed (Friends, Partners, and Children). \n                    IMPORTANT NOTE! \n\nBeard services will not performed until further notice and appointment times are extended to ensure sanitation and prices will reflect. \n \n By pressing 'Ok' you are accepting all the rules set in place at this facility during this pandemic. \n \n \n LMK if this is good or if you want a custom button.")) {
     window.open("https://booksy.com/en-ca/instant-experiences/widget/809?instant_experiences_enabled=true&ig_ix=true");
@@ -75,10 +75,16 @@ function myFunction() {
     return;
   }
 }
-</script>
+</script>-->
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="store.html">Services</a>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="store.html">Our Store</a>
+          </li>
+          <li class="nav-item" style="margin-right: 20px;">
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="buynow.html">Buy Now</a>
+          </li>
+          <li class="nav-item" style="margin-right: 20px;">
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item" style="margin-right: 20px;">
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="references.html">Contact Us</a>
@@ -91,9 +97,10 @@ function myFunction() {
             </a>
           </li>
           <li class="nav-item"  style="padding-left: 10px;">
-            <a  class="mx-2" href="" target="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932">
+            <a href="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932" class="mx-2" target="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932">
               <i class="nav-link js-scroll-trigger fas fa-map-marked-alt" style="padding-bottom: 0rem; padding-top: 0rem;"></i>
-            </a>          <!--</li>
+            </a>
+          <!--</li>
           <li class="nav-item"  style="padding-left: 10px;">  
             <a href="" class="mx-2" target="_blank">
               <i class="nav-link js-scroll-trigger fab fa-linkedin-in" style="padding-bottom: 0rem; padding-top: 0rem;"></i>
