--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function myFunction() {
           <li class="nav-item" style="margin-right: 20px;">
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="buynow.html">Buy Now</a>
           </li>
-          
+
           <li class="nav-item" style="margin-right: 20px;">
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="gallery.html">Gallery</a>
           </li>
@@ -130,7 +130,7 @@ function myFunction() {
   }
 }
 </script>-->
-                            </div>
+</div>
           <!--<p style="font-size: 12px; padding-bottom: 50px; color: black;">sublime repair pls This also doesnt have to be here its just here for whatever way you want it to be set up</p>-->
           <!--<hr class="divider my-4">-->
 
@@ -142,7 +142,7 @@ function myFunction() {
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
 
-        <div class="carousel-inner justify-content-center" style="">
+        <div class="carousel-inner justify-content-center" style="max-height: 808px;">
           <div class="carousel-item active">
             <img class="d-block w-100" src="img\portfolio\fullsize\ny.jpg" alt="First slide">
           </div>
@@ -181,7 +181,8 @@ function myFunction() {
     </div>
   </div>
 </section>
---><section id="portfolio" class="contact-section justify-content-center" style="background-color: white; width: 80%; left: 50%" >
+-->
+<section id="portfolio" class="contact-section justify-content-center" style="background-color: white; width: 80%; left: 50%" >
 
         
 <!--
@@ -212,7 +213,7 @@ function myFunction() {
     <div class="text-center text-white-50" >
       <a href="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932" style="line-height: 10px; padding-top: 10px;color: rgba(255,255,255, 0.5); text-decoration: none;">7900 Hurontario Street Unit #10, Brampton ON</a>
       <p style="">number or email for business inquiries</p>
-      <p style="margin-bottom: 0px;">
+      <p style="padding-bottom: 6px; margin-bottom: 0;">
        2020 Blurry Mane Barbershop&copy;</p>
     </div>
   </footer>
