--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,7 @@ function myFunction() {
           <li class="nav-item" style="margin-right: 20px;">
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="buynow.html">Buy Now</a>
           </li>
+
           <li class="nav-item" style="margin-right: 20px;">
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="gallery.html">Gallery</a>
           </li>
@@ -206,13 +207,12 @@ function myFunction() {
 
 
   <!-- Footer -->
-<footer class="bg-black small text-center text-white-50" style="padding-top: 5px; padding-bottom: 5px; position: absolute; bottom: 0;box-sizing: content-box; ">
-    <div class="text-center text-white-50" style="bottom: 0;" >
-      <a href="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932" style="bottom: 0; line-height: 10px; padding-top: 10px;color: rgba(255,255,255, 0.5); text-decoration: none;">7900 Hurontario Street Unit #10, Brampton ON</a>
-      <p style="bottom: 0;">number or email for business inquiries</p>
-      <p style="margin-bottom: 0px;">
-       2020 Blurry Mane Barbershop&copy;</p>
+<footer  class="page-footer fixed-bottom" style="padding-top: 10px; padding-bottom: 0px; background-color: black;">
+    <div class="text-center text-white-50">
+      <p href="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932" style="line-height: 10px; padding-top: 10px;color: rgba(255,255,255, 0.5); text-decoration: none;">7900 Hurontario Street Unit #10, Brampton ON</p>
+      <p style="line-height: 0px; ">number or email for business inquiries</p> 2020 Blurry Mane Barbershop&copy;
     </div>
+       
   </footer>
   <!-- Footer -->
   <!-- Bootstrap core JavaScript -->
