--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="index.html">Home</a>
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="book.html">Book Now</a> 
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="about:blank">Book Now</a> 
 <!--<script>
 function myFunction() {
   if (confirm("                    BLURRY MANE BARBERSHOP COVID-19 NOTICE \n\nClients will NOT be serviced if they fail to comply with the Toronto Public Health Standards: \n    Being in close contact with someone who is sick or has been\n    confirmed with Covid-19 in the past 14 days. \n    Returned from travel outside Canada in the past 14 days. \n    Experiencing the following symptoms: Fever, Cough, Shortness \n    of breath, Headache, Sore Throat, Loss of Taste or Smell. \n \nAlso, Clients MUST wear a mask and hand sanitizer must be applied upon arrival. Arriving with additional guests will NOT be allowed (Friends, Partners, and Children). \n                    IMPORTANT NOTE! \n\nBeard services will not performed until further notice and appointment times are extended to ensure sanitation and prices will reflect. \n \n By pressing 'Ok' you are accepting all the rules set in place at this facility during this pandemic. \n \n \n LMK if this is good or if you want a custom button.")) {
