--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@ function myFunction() {
 </script>-->
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="store.html">TD Test</a>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="">TD Test</a>
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="buynow.html">TD Test2</a>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="">TD Test2</a>
           </li>
 
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="gallery.html">TD Test3</a>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="">TD Test3</a>
           </li>
           <li class="nav-item" style="margin-right: 20px;">
-            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="references.html">TD test4</a>
+            <a class="nav-link js-scroll-trigger hvr-underline-from-left" href="">TD test4</a>
           </li>
          </ul>
          <ul class="navbar-nav ml-auto" style="margin-right: 0px;">
           <li class="nav-item"  style="padding-left: 10px;">
-            <a class="mx-2" href="https://www.instagram.com/blurrymane/" target="https://www.instagram.com/blurrymane/">
+            <a class="mx-2" href="" target="">
               <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0rem;"></i>
             </a>
           </li>
